tests/ui/methods/supertrait-shadowing/ambiguous-glob-imported-subtrait.stderr
error: Use of ambiguously glob imported trait `Role`
  --> $DIR/ambiguous-glob-imported-subtrait.rs:35:17
   |
LL | use first_policy::*;
   |     ------------ `Role` imported ambiguously here
...
LL |     assert!(0u8.allow_action());
   |                 ^^^^^^^^^^^^
   |
   = help: Import `Role` explicitly
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #147992 <https://github.com/rust-lang/rust/issues/147992>
note: the lint level is defined here
  --> $DIR/ambiguous-glob-imported-subtrait.rs:5:9
   |
LL | #![deny(ambiguous_glob_imported_traits)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error
